# cougar

./: README.md  benchmark.py  pyproject.toml  setup.py
.github/workflows/: release.yml
cougar/: __init__.py  debug.h  heap.h  heap_impl.h  median_heap_impl.h  monotonic_queue.h  monotonic_queue_impl.h  rolling.c  rolling_argmax.h  rolling_argmin.h  rolling_corr.h  rolling_cov.h  rolling_impl.h  rolling_kurt.h  rolling_max.h  rolling_mean.h  rolling_median.h  rolling_min.h  rolling_quantile.h  rolling_rank.h  rolling_skew.h  rolling_std.h  rolling_sum.h  rolling_template.h  rolling_var.h  template.h  treap.h
cougar/cext/: debug.h  median_heap.h  median_heap_impl.h  monotonic_queue.h  rolling_argmax.h  rolling_argmin.h  rolling_impl.h  rolling_kurt.h  rolling_max.h  rolling_mean.h  rolling_median.h  rolling_min.h  rolling_quantile.h  rolling_rank.h  rolling_skew.h  rolling_std.h  rolling_sum.h  rolling_template.h  rolling_var.h  treap_impl.h
tests/: test_rolling_mean.py  test_rolling_min.py  test_rolling_sum.py
