[tool.poetry]
name = "cougar"
version = "0.2.0"
description = ""
license = "Apache-2.0"
authors = ["Yunchong Gan <yunchong@pku.edu.cn>"]
maintainers = ["Yunchong Gan <yunchong@pku.edu.cn>"]
readme = "README.md"
repository = "https://github.com/Phimos/cougar"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11"
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
